--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#form1-t" aria-expanded="false">CONTACT</a></li>
               
               <li class="nav-item">
-                <a class="nav-link link text-primary display-4" href="http://kamiface.com/english">中文</a>
+                <a class="nav-link link text-primary display-4" href="http://kamiface.com">中文</a>
               </li></ul>
     </div>
   </nav>
@@ -493,7 +493,7 @@
                         <p class="E-mail pb-1 mbr-fonts-style display-7"> 
                             E-mail: info@kamiface.com<br></p>
                     </div>
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OSEizi0tCtR92Aq3tYB/1M+DNpKf/k9ust3nS22f72HyLB5qNbT2lREykhfcZRlM3k+By7RnrQ7/64WZl2v99WmzAk/7nahA/LkrlFeHX1BfpZ6Soayc0okxlRg8j2Ib.r9LP+bjTHzFrOTJj+o9Zuntd5y6He2mCqL/HcMjfuR+o8gZSCruE23EFnOMohg7EJTuniEh06I8JvGG2No6I9gSHaSuhFlOSxcSaRSMo5Ad7WJXiRdm3yaZE1qaNrgEH">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="n3FrErEukcOwH+SUfrW9S6OKlPjJEJC/gld0QDubvrpoh8zvuhT5si/ldd+CHo5ZfcZL+pkadSu8cqXKLqZLJPVzNysE1wd9jMi6dNTdDpRdJLrCssi84uUKMOsEvsVu.cPWDTj0TbbYsFRZhWnxWsnaKTiXHfWUcj6CqhROhi5aXZmf5kyuKKolJRlh3d2aombwOwbcpcdwvCP95gG15yq4xqpNmX38JPCbQX9vwnN0pY1S0ymfAZftau8avW2zA">
                         <div class="form-row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">成功递交！ 工作人员会尽快与您联系。</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
