--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                         <p class="E-mail pb-1 mbr-fonts-style display-7"> 
                             E-mail: info@kamiface.com<br></p>
                     </div>
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="n3FrErEukcOwH+SUfrW9S6OKlPjJEJC/gld0QDubvrpoh8zvuhT5si/ldd+CHo5ZfcZL+pkadSu8cqXKLqZLJPVzNysE1wd9jMi6dNTdDpRdJLrCssi84uUKMOsEvsVu.cPWDTj0TbbYsFRZhWnxWsnaKTiXHfWUcj6CqhROhi5aXZmf5kyuKKolJRlh3d2aombwOwbcpcdwvCP95gG15yq4xqpNmX38JPCbQX9vwnN0pY1S0ymfAZftau8avW2zA">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7BcdNZ6pG6JnbKm+cy1mQxHVlgbxNB/SygvpIAkzz43Pr1uhgCHtFzuG207eI6RSNA5QXzEXAST4EDFqLOquWFzT2WJ5oI3hsQPNFKyYQOvkz7gopcbjmdOFxHwErL4O.zJ9z206HeniQkBSTLLA7cwePZJklj+769EOv5rpUfo9i2DgCWL+CpWNIcZLqgMljcaNq40P/MkFdKSZ0w6uXVqk9R9jnLiweHFdC+N40eibi9dbEHqoBHl2HQfiCVa+M">
                         <div class="form-row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">成功递交！ 工作人员会尽快与您联系。</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -573,7 +573,7 @@
                 </div> -->
             </div>
             <div class="col-lg-7 col-md-12 col-sm-12 maps">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJLfbAaZMKhlQRaG8EfXLrMWo" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJLfbAaZMKhlQRaG8EfXLrMWo" allowfullscreen=""></iframe></div>
                 <div class="map-placeholder">
                     <div placeholder="">
                         <div class="mobirise-spinner">
@@ -642,20 +642,7 @@
 
 <div id="custom-html-34"></div>
 
-<div id="custom-html-35"><!-- Type valid HTML here -->
-
-<div id="qrcode" style="
-	position: fixed;
-	right: 8px;
-	bottom: 8px;
-	width: 100px;
-    color: white;
-    text-align: center">
-    <img src="assets/images/kamifaceqr.png" alt="" style="width: 100%">
-	<p style="color: black; font-size: 1em;">微信号 m80802200</p>
-	
-	<!-- <div style="text-align: center;">扫一扫</div> -->
-</div></div>
+<div id="custom-html-35"></div>
 
 <div class="modal mbr-popup cid-s2cvqCSbrn fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-16" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
